ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations: //리소스 특성 기록
    nginx.ingress.kubernetes.io/rewrite-target: /
spec: //앞으로 해야 하는 역할
  ingressClassName: nginx-example
  rules: //ALB의 리스너 및 규칙
  - http: //ALB의 HTTP 헤더
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
